# computational-problem-solving

01-dates/: .gitignore  README.md  date_generator.py  date_parser.py  run_tests.py
01-dates/test_data/created/: invalid_tests.in
01-dates/test_data/oc/: mixed_tests.in  valid_formats.in
01-dates/test_data/shared/: invalid_w1ll0001.in
03-snowflakes/: .gitignore  CMakeLists.txt  README.md  Segment.cpp  Segment.h  main.cpp
04-desert-crossing/: bestSolutions.txt  desertCrossing.py  readme.md  report.tex
05-look-whos-talking/: .gitignore  README.md  data.json  generatetests.py  look_whos_talking.py  report.md  runtests.py  tests.txt
07-witw/: README.md  axis.py  given_test_formats.txt  main.py  possible_formats.in  witw.py
07-witw/failed_attempts/: parse_coords_regex.py  parse_scan.py  prompt.txt  regex.out  witw.py
08-rational-thinking/: .gitignore  report.md  townhallnotes.txt
08-rational-thinking/Rationals/: Integer.cpp  Integer.h  README.md  Rational.cpp  Rational.h  main.cpp
09-bug-squashing/: .gitignore  Makefile  README.md  main.c
09-bug-squashing/sqlite/: commands.sql
11-dropping-cars/: .gitignore  README.md  analysis.ipynb  droppingCarsMultipleCars.py  linearSearch.py  weightedBinarySearch.py
